# meadows

./: .gitignore  CMakeLists.txt  imgui.ini
shaders/: bloom_blur.frag  bloom_brightpass.frag  bloom_composite.frag  coloredTriangle.vert  coloredTriangleMesh.vert  deferred.frag  deferred.vert  g_buffer.frag  g_buffer.vert  gradient.comp  gradientCustom.comp  inputStructures.glsl  mesh.frag  mesh.vert  meshShadow.frag  meshShadow.vert  shadowDebug.frag  shadowDebug.vert  shadowDepth.vert  sky.comp  ssao.frag  ssao.vert  ssao_blur.frag  ssao_composite.frag  texImage.frag
src/: Defines.h  Engine.cpp  Engine.h  Scene.cpp  Scene.h  ShadowScene.cpp  ShadowScene.h  main.cpp
src/BasicServices/: Defines.h  File.cpp  File.h  FileWriter.cpp  FileWriter.h  Log.cpp  Log.h  Platform.h  Platform_Linux.cpp  Platform_Win.cpp  RenderingStats.h
src/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ComputeEffect.cpp  ComputeEffect.h  DeletionQueue.cpp  DeletionQueue.hpp  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorGrowable.cpp  DescriptorAllocatorGrowable.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.hpp  DescriptorWriter.cpp  DescriptorWriter.h  Image.cpp  Image.h  KTXLoader.cpp  KTXLoader.h  LoadedGLTF.cpp  LoadedGLTF.h  MaterialPipeline.cpp  MaterialPipeline.h  Node.cpp  Node.h  Pipeline.cpp  Pipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineCompute.cpp  PipelineCompute.h  RenderObject.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Swapchain.cpp  Swapchain.h  Types.h  (+9 more)
src/Graphics/Pipelines/: GLTFMetallicRoughness.cpp  GLTFMetallicRoughness.h  ShadowPipeline.cpp  ShadowPipeline.h
src/Graphics/Techniques/: BasicTechnique.cpp  BasicTechnique.h  BloomTechnique.cpp  BloomTechnique.h  DeferredRenderingTechnique.cpp  DeferredRenderingTechnique.h  GBuffer.cpp  GBuffer.h  IRenderingTechnique.h  SSAOTechnique.cpp  SSAOTechnique.h  ShadowMappingTechnique.cpp  ShadowMappingTechnique.h
